Add in dependency support
